# aegis-test-generator-new

./: .env.example  .gitignore  CONTEXT.md  README.md  pyproject.toml  run_examples.py
aegis_test_generator/: __init__.py  _openai_client.py  coverage.py  generate.py  regression.py  reporter.py
aegis_test_generator/classifier/: __init__.py  llm_classifier.py
aegis_test_generator/planner/: __init__.py  dspy_planner.py  intent.py  llm_planner.py
aegis_test_generator/runner/: __init__.py  testinfra_runner.py
aegis_test_generator/test_templates/: __init__.py  renderer.py  schemas.py
docs/: architecture-c4.md  architecture-flows.md  architecture-notes.md  coverage-reference.md  development-report.md  future-enhancements.md  improvement-plan-phases.md  improvement-plan-v1.md  improvement-plan-v2-hybrid.md  pipeline.md  project-log.md  smoke-test-report.md
docs/migrations/: evaluation-extraction.md  input-extraction.md  sandbox-extraction.md  testinfra-runner.md  testsuite-extraction.md
examples/: broken_input.json  broken_patch.yml  complex_input.json  complex_patch.yml  partial_input.json  partial_patch.yml  patch.yml  sample_input.json  simple_input.json  simple_patch.yml
outputs/generated_tests/: broken_tests.py  complex_run.py  complex_tests.py  generated_tests.py  partial_tests.py  simple_run.py  simple_tests.py
outputs/reports/: broken.md  complex.md  partial.md  simple.md  smoke-broken.md  smoke-complex.md  smoke-nginx.md  smoke-partial.md  smoke-simple.md
scripts/: smoke_pipeline.py  smoke_planner.py
tests/: __init__.py
(+61 files in other folders)
